[package]
name = "reth-hyperliquid-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-rlp = { workspace = true }
serde.workspace = true
rmp-serde = "1.3"
tokio = { workspace = true, features = ["sync", "macros", "time", "rt-multi-thread"] }
parking_lot.workspace = true

[dev-dependencies]
clap.workspace = true
reth-cli-commands.workspace = true
